<resources>
    <string name="app_name">GCU Admin</string>
    <string name="forgot_credentials">Forgot username or password</string>
    <string name="login_prompt">LOGIN</string>
    <string name="password_prompt">password</string>
    <string name="id_prompt">Staff id : </string>
    <string name="login_heading">Staff Portal \n LOGIN</string>
    <string name="logo_desc">Logo</string>
    <string name="nav_home">Home</string>
    <string name="nav_students">Students</string>
    <string name="nav_mark_attendance">Mark Attendance</string>
    <string name="nav_students_360">Students 360</string>
    <string name="image_placeholder">Placeholder profile image</string>
    <string name="staff_name">Staff Name</string>
    <string name="designation">Designation</string>
    <string name="cont_desc_menu">Toolbar menu button</string>
    <string name="heading">GCU Admin</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_btn_tt">Today\'s time table</string>
    <string name="dashboard_btn_ld">Leave Details</string>
    <string name="dashboard_label_wtt">Week Time Table</string>
    <string name="calendar_button">Calendar Button</string>
    <string name="heading_profile">Profile</string>
    <string name="na">NA</string>
    <string name="studId">Student id : </string>
    <string name="studUnivRegNo">Univ. Reg No. : </string>
    <string name="studCourse">Course : </string>
    <string name="stud_name">Student Name : </string>
    <string name="studSem">Semester : </string>
    <string name="studHostel">Hostel : </string>
    <string name="studEmailOff">Official Email : </string>
    <string name="studEmailPer">Personal Email : </string>
    <string name="studFatherName">Father\'s Name : </string>
    <string name="studMotherName">Mother\'s Name : </string>
    <string name="studFatherMob">Father\'s Mobile : </string>
    <string name="studMotherMob">Mother\'s Mobile : </string>
    <string name="studMobile">Student\'s Mobile : </string>
    <string name="staff_desig">Designation : </string>
    <string name="staff_dept">Department : </string>
    <string name="staff_dob">DOB : </string>
    <string name="staff_work_loc">Location : </string>
    <string name="staff_joining_date">Joining Date : </string>
    <string name="staff_reporting_to">Reporting : </string>
    <string name="update_details">Update Details</string>
    <string name="staff_mob">Mobile :</string>
    <string name="staffName">Full Name :</string>
    <string name="staff_email">Email :</string>
    <string name="cancel_class">Cancel class</string>
    <string name="cancellation_reason">Cancellation Reason</string>
    <string name="admission_sources">Sources of Enquiry</string>
    <string name="enquiry_report">Year-wise enquiry report</string>
    <string name="course_enquiry_label">Course-wise enquiry</string>
    <string name="from_date">from date</string>
    <string name="to_date">to date</string>
    <string name="enrolled">Enrolled</string>
    <string name="enquiry">Enquiry</string>
    <string name="last_week">Last Week</string>
</resources>
