<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="edu.gcu.gcuadmin.login.LoginActivity"
    android:orientation="vertical"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo_desc"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/login_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_prompt"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_prompt"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_prompt"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:id="@+id/login_link_forgotCred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />


</LinearLayout>
</ScrollView>