<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="180dp"
              android:background="@color/colorPrimary"
              android:paddingTop="15dp"
              android:gravity="bottom"
              android:elevation="10dp"
    >
    <ImageView
        android:id="@+id/drawer_header_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/profile_avatar_placeholder_large"
        android:background="@drawable/circle_img_view_bg"
        />
    <TextView
        android:id="@+id/drawer_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/staff_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/drawer_header_designation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:text="@string/designation"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        />
</LinearLayout>