<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="20dp"
              android:paddingTop="2dp"

    >
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/course_enquiry_label"
        android:textSize="@dimen/textXLarge"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/course_enquiry_label"
        android:textStyle="bold|italic"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_enquiry_refresh"
        android:background="@drawable/grey_ripple"
        android:src="@drawable/ic_action_refresh"

        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:visibility="visible"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_enquiry_linear"
        android:layout_below="@id/course_enquiry_label"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="2dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight=".64"
            android:id="@+id/ce_adapter_name"
            android:textStyle="bold"
            android:textSize="@dimen/textSmall"
            android:textAlignment="center"
            android:text="Course"
            android:background="@drawable/tab_bg"
            android:padding="2dp"
            />
        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:columnCount="2"
            android:rowCount="2"
            android:background="@drawable/tab_bg"
            android:padding="2dp"
            >
            <TextView
                android:layout_columnSpan="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total"
                android:textSize="@dimen/textMedium"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ce_adapter_total_enquiry"
                android:textAlignment="center"
                android:textSize="@dimen/textXXSmall"
                android:text="@string/enquiry"
                android:padding="2dp"
                android:layout_columnSpan="1"
                android:layout_gravity="start"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ce_adapter_total_enrolled"
                android:textAlignment="center"
                android:textSize="@dimen/textXXSmall"
                android:text="@string/enrolled"
                android:padding="2dp"
                android:layout_columnSpan="1"
                android:layout_gravity="end"
                />
        </GridLayout>

        <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.12"
        android:columnCount="2"
        android:rowCount="2"
        android:background="@drawable/tab_bg"
        android:padding="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="Today"
                android:textSize="@dimen/textMedium"
                android:gravity="center"
                android:textStyle="bold"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ce_adapter_total_enquiry_today"
            android:textAlignment="center"
            android:textSize="@dimen/textXXSmall"
            android:text="@string/enquiry"

            android:padding="2dp"
            android:layout_columnSpan="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ce_adapter_total_enrolled_today"
            android:textAlignment="center"
            android:textSize="@dimen/textXXSmall"
            android:text="@string/enrolled"
            android:padding="2dp"
            android:layout_columnSpan="1"
            android:layout_gravity="end"
            />
        </GridLayout>
        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:columnCount="2"
            android:rowCount="2"
            android:background="@drawable/tab_bg"
            android:padding="2dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/last_week"
            android:textSize="@dimen/textMedium"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ce_adapter_total_enquiry_last_week"
            android:textAlignment="center"
            android:textSize="@dimen/textXXSmall"
            android:text="@string/enquiry"
            android:padding="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ce_adapter_total_enrolled_last_week"
            android:textAlignment="center"
            android:textSize="@dimen/textXXSmall"
            android:text="@string/enrolled"
            android:padding="2dp"
            android:layout_gravity="end"
            />
        </GridLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_enquiry_recycler"
        android:nestedScrollingEnabled="false"
        android:layout_below="@id/course_enquiry_linear"
        android:background="@drawable/tab_bg"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/course_enquiry_linear"
        android:progressDrawable="@drawable/ic_action_refresh"
        android:indeterminate="true"
        android:id="@+id/course_enquiry_loading"
        />
    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:layout_width="match_parent"
        android:layout_height="@dimen/admission_by_course_graph_height"
        android:id="@+id/report_graph_chart_admissions"
        android:layout_marginTop="10dp"
        android:layout_below="@id/course_enquiry_label"
        android:visibility="gone"
        />
</RelativeLayout>
</ScrollView>